--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -56,6 +56,10 @@
 
   {{ 'theme.css' | asset_url | stylesheet_tag }}
 
+  <!-- ANIMATED PRODUCT IMAGES -->
+  {{ 'product-animated-image.css' | asset_url | stylesheet_tag }}
+  {{ 'product-animated-image.js' | asset_url | script_tag }}
+
   <script>
     if (window.navigator.userAgent.indexOf('MSIE ') > 0 || window.navigator.userAgent.indexOf('Trident/') > 0) {
       document.documentElement.className = document.documentElement.className + ' ie';
