--- a/sections/section-grid-image-text.liquid
+++ b/sections/section-grid-image-text.liquid
@@ -135,7 +135,7 @@
 {% schema %}
 
 {
-    "name": "Obvi | Grid Image Text",
+    "name": "Storm | Grid Image Text",
     "class": "jod-section-grid-image-text",
     "settings": [
         {
@@ -829,7 +829,7 @@
     ],
     "presets": [
         {
-            "name": "OBVI | Grid Image Text",
+            "name": "Storm | Grid Image Text",
             "category": "Text"
         }
     ]
