--- a/assets/product-animated-image.css
+++ b/assets/product-animated-image.css
@@ -1,19 +1,9 @@
-.product-single{
-    display: flex;
-    justify-content: center;
+.animated-images-container {
+    display: none;
 }
-
-.product_image-main_outer{
-    position: relative;
-    width: 100%;
-    display: block;
+.animated-images-container img {
+    max-width:100%;
 }
-
-.product_image-main_outer > div{
-    width: 100%;
-    display: block;
-}
-
 .product_image_background,
 .product_image_foreground{
     position: absolute;
@@ -24,99 +14,25 @@
 }
 .product_image_background{
     z-index: 0;
-}
-.product_image-main{
-    position: relative;
-    z-index: 1;
+    animation: backgroundMove 6s ease 0s infinite normal none;
 }
 .product_image_foreground{
     z-index: 2;
-}
-
-.product_image-thumbnails_outer{
-    width: 100%;
-    display: block;
-}
-.product_image-thumbnails{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 15px;
-    margin-left: -9px;
-    margin-right: -9px;
-}
-
-.product_thumbnail_image{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    border: 1px solid transparent;
-}
-
-.thumbnail--active{
-    border: 1px solid #f64899 !important;
-}
-
-.product_image-thumbnail{
-    width: 25%;
-    padding: 0 5px;
-}
-
-.product_image_background{
-    animation: backgroundMove 6s ease 0s infinite normal none;
-}
-
-.product_image_foreground{
-      animation: foregroundMove 6s ease 0s infinite normal none;
+    animation: foregroundMove 6s ease 0s infinite normal none;
 }
 
 @keyframes foregroundMove {
-    0.0%{
+    0% {
     }
-    50%{
+    50% {
         transform: translate(0, -30px)
     }
 }
 
 @keyframes backgroundMove {
-    0.0%{
+    0% {
     }
-    50%{
+    50% {
         transform: translate(0, 30px);
     }
-}
-
-@media(max-width: 749px){
-    .product-single{
-        display: block !important;
-    }
-
-    .grid__item{
-        float: none;
-    }
-
-    .product_image-thumbnails{
-        width: 100%;
-        justify-content: center;
-        margin-left: 0;
-        margin-right: 0;
-    }
-
-    .pdp-information_wrapper{
-        margin-bottom: 5vw;
-    }
-
-}
-.pdp-information_wrapper{
-    margin-bottom: 30px;
-}
-
-/* HIDE SOCIAL ICONS */
-.social-sharing{
-    display: none !important;
-}
-
-#js-ajax-add-to-cart{
-    border: transparent !important;
 }
