--- a/assets/theme.css
+++ b/assets/theme.css
@@ -32,7 +32,7 @@ https://flickity.metafizzy.co
 
 
 .footer__logo {
-    padding-top: 180px!important;
+    padding-top: 6em!important;
     display: block!important;
     margin: 0 auto;
     max-width: 360px;
