--- a/assets/theme.dev.css
+++ b/assets/theme.dev.css
@@ -212,6 +212,7 @@ https://flickity.metafizzy.co
 
 /* ---- previous/next buttons ---- */
 .flickity-prev-next-button {
+  padding: 10px;
   top: 50%;
   width: 50px;
   height: 50px;
